--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "array.prototype.flat": "^1.2.3",
+    "moment": "^2.22.2",
     "react": "^16.12.0",
+    "react-big-calendar": "^0.20.2",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.1"
+    "react-scripts": "3.3.1",
+    "react_google_calendar": "^2.2.4444"
   },
   "scripts": {
     "start": "react-scripts start",
