--- a/package.json
+++ b/package.json
@@ -8,13 +8,23 @@
     "@fortawesome/free-regular-svg-icons": "^5.12.1",
     "@fortawesome/free-solid-svg-icons": "^5.12.1",
     "@fortawesome/react-fontawesome": "^0.1.8",
-    "array.prototype.flat": "^1.2.3",
+    "axios": "^0.19.2",
+    "i18next": "^19.1.0",
+    "i18next-browser-languagedetector": "^4.0.1",
+    "i18next-xhr-backend": "^3.2.2",
     "moment": "^2.22.2",
     "react": "^16.12.0",
-    "react-big-calendar": "^0.20.2",
+    "react-big-calendar": "^0.20.4",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
+    "react-epic-spinners": "^0.4.1",
+    "react-i18next": "^11.3.1",
+    "react-router": "^5.1.2",
+    "react-router-bootstrap": "^0.25.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
-    "react_google_calendar": "^2.2.4444"
+    "react-tabs": "^3.1.0",
+    "superagent": "^5.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
