--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
     "react-epic-spinners": "^0.4.1",
+    "react-google-maps": "^9.4.5",
     "react-i18next": "^11.3.1",
+    "react-icons": "^3.9.0",
     "react-router": "^5.1.2",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.1.2",
